Created Model for probelm in MongoDB

--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.0",
+    "nodemon": "^1.18.7"
   }
 }
