--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
     "nodemon": "^1.18.7"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0"
   }
 }
