--- a/oj-client/package.json
+++ b/oj-client/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@types/auth0": "^2.9.7",
+    "ace-builds": "^1.4.2",
+    "ace-code-editor": "^1.2.3",
     "angular2-jwt": "^0.2.3",
     "auth0-js": "^9.8.2",
     "auth0-lock": "^11.12.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "octicons": "^8.2.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
