--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0"
