--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
+    "node-rest-client": "^3.1.0",
     "nodemon": "^1.18.7",
     "socket.io": "^2.2.0"
   },
