--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.4.0",
     "node-rest-client": "^3.1.0",
     "nodemon": "^1.18.7",
+    "redis": "^2.8.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
